--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 flask == 1.1.2
 gunicorn == 19.9.0
 werkzeug == 0.15.5
-numpy >= 1.22.0
-scikit-learn==0.21.3
+numpy == 1.22.0
+scikit-learn==0.24.2
 matplotlib >= 1.4.3
 pandas >= 1.3.5
 scipy>=0.15.1
